.config/k8s/overlays/dev/ingress-dev.yaml
# k8s/overlays/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: blog.local # It may need to be added to the hosts file.
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: blog-litellm
                port:
                  number: 4000
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: blog-django
                port:
                  name: static
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: blog-django
                port:
                  name: static
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-django
                port:
                  number: 8000
